etc/kubernetes/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: inventory-management-develop
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
