etc/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: inventory-management-service-develop
  namespace: inventory-management-develop
spec:
  selector:
    app: inventory-management-service-develop
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
